added and updated all files

--- a/test_insight_env_wpostgreSQL.ipynb
+++ b/test_insight_env_wpostgreSQL.ipynb
@@ -37,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-03T16:07:55.847815Z",
-     "start_time": "2020-01-03T16:07:55.842190Z"
+     "end_time": "2020-01-19T16:34:12.139765Z",
+     "start_time": "2020-01-19T16:34:00.047328Z"
     }
    },
    "outputs": [],
@@ -69,6 +69,34 @@
     "# Multiprocessing/threading\n",
     "import multiprocess\n",
     "import threading   # included in base"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-01-19T16:34:12.323707Z",
+     "start_time": "2020-01-19T16:34:12.162497Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'yapf'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-da89a0b56c9b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0myapf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myapflib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myapf_api\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'yapf'"
+     ]
+    }
+   ],
+   "source": [
+    "# Need yapf for code prettify\n",
+    "import json\n",
+    "# import yapf.yapflib.yapf_api"
    ]
   },
   {
