edited file structure and folder name

--- a/daily_fantasy_baseball_player_predictor.ipynb
+++ b/daily_fantasy_baseball_player_predictor.ipynb
@@ -6411,9 +6411,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Careful**:\n",
-    "- at-bats against the same pitcher may be over-represented - but below shows most with 1 to 3 ab\n",
-    "- how do I know that there already isn't some selection that coaches are making for hitters?"
+    "# Important notes and words of caution\n",
+    "- At-bats against the same pitcher may be over-represented - but below shows most with 1 to 3 ab\n",
+    "- How do I know that there already isn't some selection that coaches are making for hitters?\n",
+    "- How to use probabilities? Probabilities of it being a 1.\n",
+    "- Sid: try a recommender framework"
    ]
   },
   {
