added flask stuff, tried to model

--- a/postgreSQL_notes.ipynb
+++ b/postgreSQL_notes.ipynb
@@ -13,7 +13,9 @@
    "source": [
     "Enter the database:\n",
     "<br>\n",
-    "`psql baseball -h localhost -U lacar`"
+    "`psql baseball -h localhost -U lacar`\n",
+    "\n",
+    "pw: "
    ]
   },
   {
