--- a/test_insight_env_wpostgreSQL.ipynb
+++ b/test_insight_env_wpostgreSQL.ipynb
@@ -23,7 +23,17 @@
     "`conda remove --name insight --all`\n",
     "\n",
     "Check environment that Python is being executed within this notebook by looking in [top-right corner](\n",
-    "https://stackoverflow.com/questions/37085665/in-which-conda-environment-is-jupyter-executing)\n"
+    "https://stackoverflow.com/questions/37085665/in-which-conda-environment-is-jupyter-executing)\n",
+    "\n",
+    "\n",
+    "Learned about additional useful tricks here from Jonathan Whitmore's talk here:\n",
+    "https://github.com/jbwhit/jupyter-tips-and-tricks\n",
+    "\n",
+    "I also learned about black and Jupyter black to handle code formatting and readability.\n",
+    "It formats when the cell gets executed.\n",
+    "\n",
+    "https://black.readthedocs.io/en/stable/\n",
+    "https://pypi.org/project/nb-black/\n"
    ]
   },
   {
@@ -73,30 +83,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-19T16:34:12.323707Z",
-     "start_time": "2020-01-19T16:34:12.162497Z"
+     "end_time": "2020-01-23T14:03:48.360977Z",
+     "start_time": "2020-01-23T14:03:48.357088Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'yapf'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-da89a0b56c9b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0myapf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myapflib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myapf_api\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'yapf'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Need yapf for code prettify\n",
     "import json\n",
     "# import yapf.yapflib.yapf_api"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-01-23T14:06:57.113220Z",
+     "start_time": "2020-01-23T14:06:56.933676Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            setTimeout(function() {\n",
+       "                var nbb_cell_id = 4;\n",
+       "                var nbb_unformatted_code = \"%load_ext nb_black\";\n",
+       "                var nbb_formatted_code = \"%load_ext nb_black\";\n",
+       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
+       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
+       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
+       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
+       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
+       "                        }\n",
+       "                        break;\n",
+       "                    }\n",
+       "                }\n",
+       "            }, 500);\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# To use jupyter black\n",
+    "%load_ext nb_black"
    ]
   },
   {
@@ -147,6 +188,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -172,70 +220,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-03T16:09:22.312445Z",
-     "start_time": "2020-01-03T16:09:22.306148Z"
+     "end_time": "2020-01-23T14:10:45.106556Z",
+     "start_time": "2020-01-23T14:10:45.080052Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            setTimeout(function() {\n",
+       "                var nbb_cell_id = 8;\n",
+       "                var nbb_unformatted_code = \"# Pitch result designation dictionary\\n# A similar question and approach here https://www.reddit.com/r/Sabermetrics/comments/e130el/how_to_calculate_whiff_rate/\\n# Note that bunts are included\\ncontact_desc = [\\n    \\\"pitchout_hit_into_play_score\\\",\\n    \\\"hit_into_play_score\\\",\\n    \\\"hit_into_play\\\",\\n    \\\"hit_by_pitch\\\",\\n    \\\"hit_into_play_no_out\\\",\\n    \\\"pitchout_hit_into_play_no_out\\\",\\n    \\\"pitchout_hit_into_play\\\",\\n]\\nfoul_desc = [\\\"foul_pitchout\\\", \\\"foul_bunt\\\", \\\"bunt_foul_tip\\\", \\\"foul\\\", \\\"foul_tip\\\"]\\ntakeball_desc = [\\\"intent_ball\\\", \\\"blocked_ball\\\", \\\"pitchout\\\", \\\"ball\\\"]\\ntakestrike_desc = [\\\"called_strike\\\"]\\nunknownstrike_desc = [\\\"unknown_strike\\\"]\\nwhiff_desc = [ \\\"swinging_strike_blocked\\\", \\\"swinging_strike\\\", \\\"missed_bunt\\\",  \\\"swinging_strike\\\"]\\n\\ndesc_dict = {\\n    \\\"contact\\\": contact_desc,\\n    \\\"foul\\\": foul_desc,\\n    \\\"take_ball\\\": takeball_desc,\\n    \\\"take_strike\\\": takestrike_desc,\\n    \\\"unknown_strike\\\": unknownstrike_desc,\\n    \\\"whiff\\\": whiff_desc,\\n}\\n\\nbat_stand_list = [\\\"L\\\", \\\"R\\\"]\\nzone_list = list(range(1, 13))\\nsw_types = list(desc_dict.keys())\";\n",
+       "                var nbb_formatted_code = \"# Pitch result designation dictionary\\n# A similar question and approach here https://www.reddit.com/r/Sabermetrics/comments/e130el/how_to_calculate_whiff_rate/\\n# Note that bunts are included\\ncontact_desc = [\\n    \\\"pitchout_hit_into_play_score\\\",\\n    \\\"hit_into_play_score\\\",\\n    \\\"hit_into_play\\\",\\n    \\\"hit_by_pitch\\\",\\n    \\\"hit_into_play_no_out\\\",\\n    \\\"pitchout_hit_into_play_no_out\\\",\\n    \\\"pitchout_hit_into_play\\\",\\n]\\nfoul_desc = [\\\"foul_pitchout\\\", \\\"foul_bunt\\\", \\\"bunt_foul_tip\\\", \\\"foul\\\", \\\"foul_tip\\\"]\\ntakeball_desc = [\\\"intent_ball\\\", \\\"blocked_ball\\\", \\\"pitchout\\\", \\\"ball\\\"]\\ntakestrike_desc = [\\\"called_strike\\\"]\\nunknownstrike_desc = [\\\"unknown_strike\\\"]\\nwhiff_desc = [\\n    \\\"swinging_strike_blocked\\\",\\n    \\\"swinging_strike\\\",\\n    \\\"missed_bunt\\\",\\n    \\\"swinging_strike\\\",\\n]\\n\\ndesc_dict = {\\n    \\\"contact\\\": contact_desc,\\n    \\\"foul\\\": foul_desc,\\n    \\\"take_ball\\\": takeball_desc,\\n    \\\"take_strike\\\": takestrike_desc,\\n    \\\"unknown_strike\\\": unknownstrike_desc,\\n    \\\"whiff\\\": whiff_desc,\\n}\\n\\nbat_stand_list = [\\\"L\\\", \\\"R\\\"]\\nzone_list = list(range(1, 13))\\nsw_types = list(desc_dict.keys())\";\n",
+       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
+       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
+       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
+       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
+       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
+       "                        }\n",
+       "                        break;\n",
+       "                    }\n",
+       "                }\n",
+       "            }, 500);\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Pitch result designation dictionary\n",
     "# A similar question and approach here https://www.reddit.com/r/Sabermetrics/comments/e130el/how_to_calculate_whiff_rate/\n",
     "# Note that bunts are included\n",
-    "contact_desc = (['pitchout_hit_into_play_score', 'hit_into_play_score', 'hit_into_play',\n",
-    "                 'hit_by_pitch', 'hit_into_play_no_out', 'pitchout_hit_into_play_no_out',\n",
-    "                 'pitchout_hit_into_play'])\n",
-    "foul_desc = ['foul_pitchout', 'foul_bunt', 'bunt_foul_tip', 'foul', 'foul_tip']\n",
-    "takeball_desc = ['intent_ball', 'blocked_ball', 'pitchout', 'ball']\n",
-    "takestrike_desc = ['called_strike']\n",
-    "unknownstrike_desc = ['unknown_strike']\n",
-    "whiff_desc = ['swinging_strike_blocked', 'swinging_strike', 'missed_bunt', 'swinging_strike']\n",
+    "contact_desc = [\n",
+    "    \"pitchout_hit_into_play_score\",\n",
+    "    \"hit_into_play_score\",\n",
+    "    \"hit_into_play\",\n",
+    "    \"hit_by_pitch\",\n",
+    "    \"hit_into_play_no_out\",\n",
+    "    \"pitchout_hit_into_play_no_out\",\n",
+    "    \"pitchout_hit_into_play\",\n",
+    "]\n",
+    "foul_desc = [\"foul_pitchout\", \"foul_bunt\", \"bunt_foul_tip\", \"foul\", \"foul_tip\"]\n",
+    "takeball_desc = [\"intent_ball\", \"blocked_ball\", \"pitchout\", \"ball\"]\n",
+    "takestrike_desc = [\"called_strike\"]\n",
+    "unknownstrike_desc = [\"unknown_strike\"]\n",
+    "whiff_desc = [\n",
+    "    \"swinging_strike_blocked\",\n",
+    "    \"swinging_strike\",\n",
+    "    \"missed_bunt\",\n",
+    "    \"swinging_strike\",\n",
+    "]\n",
     "\n",
-    "desc_dict = {'contact':contact_desc, 'foul':foul_desc, 'take_ball':takeball_desc,\n",
-    "             'take_strike':takestrike_desc, 'unknown_strike':unknownstrike_desc,\n",
-    "             'whiff':whiff_desc}\n",
+    "desc_dict = {\n",
+    "    \"contact\": contact_desc,\n",
+    "    \"foul\": foul_desc,\n",
+    "    \"take_ball\": takeball_desc,\n",
+    "    \"take_strike\": takestrike_desc,\n",
+    "    \"unknown_strike\": unknownstrike_desc,\n",
+    "    \"whiff\": whiff_desc,\n",
+    "}\n",
     "\n",
-    "bat_stand_list = ['L', 'R']\n",
+    "bat_stand_list = [\"L\", \"R\"]\n",
     "zone_list = list(range(1, 13))\n",
     "sw_types = list(desc_dict.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-05T06:12:27.265285Z",
-     "start_time": "2020-01-05T06:12:27.255998Z"
+     "end_time": "2020-01-23T14:11:07.178326Z",
+     "start_time": "2020-01-23T14:11:07.146124Z"
     },
     "code_folding": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            setTimeout(function() {\n",
+       "                var nbb_cell_id = 9;\n",
+       "                var nbb_unformatted_code = \"def get_pitcher_pb_sc_data(pitcher):\\n    print(colored(pitcher, 'blue'))\\n    pitcher_for_lookup = pitcher.split()\\n    \\n    # Account for Chi Chi Gonzales since I'm splitting by space\\n    if len(pitcher_for_lookup) > 2:\\n        p_id = playerid_lookup(pitcher_for_lookup[2], pitcher_for_lookup[0] + ' ' + pitcher_for_lookup[1])\\n    else:\\n        p_id = playerid_lookup(pitcher_for_lookup[1], pitcher_for_lookup[0])\\n    \\n    # Account for common names\\n    if p_id.shape[0] > 1:\\n        p_id = p_id[p_id['mlb_played_last'] > 2008]\\n    df_pitcher_sc = statcast_pitcher('2019-03-28', '2019-09-29', player_id = int(p_id['key_mlbam']))\\n    \\n    # Swing designation info\\n    df_pitcher_sc['sw_type'] = None\\n    for key, value in desc_dict.items():\\n        df_pitcher_sc.loc[df_pitcher_sc['description'].isin(value), 'sw_type'] = key\\n    df_pitcher_sc['sw_true'] = 0\\n    df_pitcher_sc.loc[df_pitcher_sc['sw_type'].isin(['whiff', 'contact', 'foul']), 'sw_true'] = 1\\n    \\n    return p_id, df_pitcher_sc\";\n",
+       "                var nbb_formatted_code = \"def get_pitcher_pb_sc_data(pitcher):\\n    print(colored(pitcher, \\\"blue\\\"))\\n    pitcher_for_lookup = pitcher.split()\\n\\n    # Account for Chi Chi Gonzales since I'm splitting by space\\n    if len(pitcher_for_lookup) > 2:\\n        p_id = playerid_lookup(\\n            pitcher_for_lookup[2], pitcher_for_lookup[0] + \\\" \\\" + pitcher_for_lookup[1]\\n        )\\n    else:\\n        p_id = playerid_lookup(pitcher_for_lookup[1], pitcher_for_lookup[0])\\n\\n    # Account for common names\\n    if p_id.shape[0] > 1:\\n        p_id = p_id[p_id[\\\"mlb_played_last\\\"] > 2008]\\n    df_pitcher_sc = statcast_pitcher(\\n        \\\"2019-03-28\\\", \\\"2019-09-29\\\", player_id=int(p_id[\\\"key_mlbam\\\"])\\n    )\\n\\n    # Swing designation info\\n    df_pitcher_sc[\\\"sw_type\\\"] = None\\n    for key, value in desc_dict.items():\\n        df_pitcher_sc.loc[df_pitcher_sc[\\\"description\\\"].isin(value), \\\"sw_type\\\"] = key\\n    df_pitcher_sc[\\\"sw_true\\\"] = 0\\n    df_pitcher_sc.loc[\\n        df_pitcher_sc[\\\"sw_type\\\"].isin([\\\"whiff\\\", \\\"contact\\\", \\\"foul\\\"]), \\\"sw_true\\\"\\n    ] = 1\\n\\n    return p_id, df_pitcher_sc\";\n",
+       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
+       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
+       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
+       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
+       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
+       "                        }\n",
+       "                        break;\n",
+       "                    }\n",
+       "                }\n",
+       "            }, 500);\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def get_pitcher_pb_sc_data(pitcher):\n",
-    "    print(colored(pitcher, 'blue'))\n",
+    "    print(colored(pitcher, \"blue\"))\n",
     "    pitcher_for_lookup = pitcher.split()\n",
-    "    \n",
+    "\n",
     "    # Account for Chi Chi Gonzales since I'm splitting by space\n",
     "    if len(pitcher_for_lookup) > 2:\n",
-    "        p_id = playerid_lookup(pitcher_for_lookup[2], pitcher_for_lookup[0] + ' ' + pitcher_for_lookup[1])\n",
+    "        p_id = playerid_lookup(\n",
+    "            pitcher_for_lookup[2], pitcher_for_lookup[0] + \" \" + pitcher_for_lookup[1]\n",
+    "        )\n",
     "    else:\n",
     "        p_id = playerid_lookup(pitcher_for_lookup[1], pitcher_for_lookup[0])\n",
-    "    \n",
+    "\n",
     "    # Account for common names\n",
     "    if p_id.shape[0] > 1:\n",
-    "        p_id = p_id[p_id['mlb_played_last'] > 2008]\n",
-    "    df_pitcher_sc = statcast_pitcher('2019-03-28', '2019-09-29', player_id = int(p_id['key_mlbam']))\n",
-    "    \n",
+    "        p_id = p_id[p_id[\"mlb_played_last\"] > 2008]\n",
+    "    df_pitcher_sc = statcast_pitcher(\n",
+    "        \"2019-03-28\", \"2019-09-29\", player_id=int(p_id[\"key_mlbam\"])\n",
+    "    )\n",
+    "\n",
     "    # Swing designation info\n",
-    "    df_pitcher_sc['sw_type'] = None\n",
+    "    df_pitcher_sc[\"sw_type\"] = None\n",
     "    for key, value in desc_dict.items():\n",
-    "        df_pitcher_sc.loc[df_pitcher_sc['description'].isin(value), 'sw_type'] = key\n",
-    "    df_pitcher_sc['sw_true'] = 0\n",
-    "    df_pitcher_sc.loc[df_pitcher_sc['sw_type'].isin(['whiff', 'contact', 'foul']), 'sw_true'] = 1\n",
-    "    \n",
+    "        df_pitcher_sc.loc[df_pitcher_sc[\"description\"].isin(value), \"sw_type\"] = key\n",
+    "    df_pitcher_sc[\"sw_true\"] = 0\n",
+    "    df_pitcher_sc.loc[\n",
+    "        df_pitcher_sc[\"sw_type\"].isin([\"whiff\", \"contact\", \"foul\"]), \"sw_true\"\n",
+    "    ] = 1\n",
+    "\n",
     "    return p_id, df_pitcher_sc"
    ]
   },
