file reorg and more model testing

--- a/postgreSQL_notes.ipynb
+++ b/postgreSQL_notes.ipynb
@@ -121,11 +121,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-01-25T23:53:39.852566Z",
+     "start_time": "2020-01-25T23:53:39.849377Z"
+    }
+   },
+   "source": [
+    "# Example of how to format a long query"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def return_df_metric_rate_batter(metric, batter_id):\n",
+    "\n",
+    "    sql_query = \"\"\"\n",
+    "    SELECT \"game_date\", \"batter\", \"events\" FROM statcast\n",
+    "    WHERE \"batter\"= \n",
+    "    \"\"\" + str(batter_id) + \"\"\"\n",
+    "    AND \"game_date\" BETWEEN '2019-03-28' AND '2019-04-30'\n",
+    "    AND \"events\" IS NOT NULL\n",
+    "    \"\"\"\n",
+    "\n",
+    "    df_events = pd.read_sql_query(sql_query,con)\n",
+    "    \n",
+    "    df_summary = df_events.groupby('events').count()['game_date'] / df_events.count()[0]\n",
+    "    return df_summary[metric]"
+   ]
   },
   {
    "cell_type": "code",
