--- a/DS_dev_setup_part_2.ipynb
+++ b/DS_dev_setup_part_2.ipynb
@@ -389,17 +389,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.6"
+   "version": "3.6.9"
   },
   "toc": {
+   "base_numbering": 1,
    "nav_menu": {},
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": "block",
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
