created a v2 notebook for more culling and refactored code

--- a/daily_fantasy_baseball_predictor_v2.ipynb
+++ b/daily_fantasy_baseball_predictor_v2.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "**How to identify position players on a given date?**\n",
     "\n",
-    "Problem:\n",
+    "**Problem:**\n",
     "<br>\n",
     "In daily fantasy baseball, a participant sets up their team against another player of their league. Some position players are stars and should play nearly all the time, but often a position is shared between other players on your roster. How do you choose which platooning player to start (especially if there is a limited sample size for the batter facing that pitcher)?\n",
     "\n",
@@ -14,7 +14,7 @@
     "<br>\n",
     "- Focus on features of the batter (e.g. historical batting average) and pitcher (e.g. historical ERA, WHIP) to predict whether the batter would output a hit (or HR, single, double, etc.) in a given batter-pitcher at-bat matchup.\n",
     "\n",
-    "- If you choose a given date (e.g. May 1), you know the starting pitcher a batter would face. Use statistical data to make a prediction on how well that player will do against the pitcher as a guide for a decision. If the matchup for a particular batter-pitcher is small, find similar players to serve as a guide. (Similar players can be found by using Erdos score.)\n",
+    "- If you choose a given date (e.g. May 9), you know the starting pitcher a batter would face. Use data to build a model taht predicts how well a batter would do against the pitcher as a guide for a decision. If the matchup for a particular batter-pitcher is small, find similar players to serve as a guide. (Similar players can be found by using Erdos score.)\n",
     "\n",
     "- How do I know if my strategy is improved over other models? Look at which player one would choose from a simple player ranking.\n",
     "\n",
