--- a/player_pair_set_and_validation.ipynb
+++ b/player_pair_set_and_validation.ipynb
@@ -3542,7 +3542,7 @@
      "end_time": "2020-01-31T00:50:53.067451Z",
      "start_time": "2020-01-31T00:50:53.047936Z"
     },
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -3624,6 +3624,517 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Picking dates for simple format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-01-31T16:51:34.139857Z",
+     "start_time": "2020-01-31T16:51:34.114827Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            setTimeout(function() {\n",
+       "                var nbb_cell_id = 207;\n",
+       "                var nbb_unformatted_code = \"def get_common_playing_dates_simple(player_id1, player_id2, starting_date):\\n\\n    # Test set\\n    # player_id1 = 435622\\n    # player_id2 = 623993\\n    # starting_date = \\\"2019-09-01\\\"\\n\\n    sql_query = (\\n        \\\"\\\"\\\"\\n        SELECT * FROM \\n        (SELECT DISTINCT statcast.game_date, statcast.batter \\n        FROM statcast \\n        WHERE statcast.batter= \\n        \\\"\\\"\\\"\\n        + str(player_id1)\\n        + \\\"\\\"\\\"\\n        AND statcast.game_date>\\n        \\\"\\\"\\\"\\n        + str(starting_date)\\n        + \\\")\\\"\\n        + \\\"\\\"\\\" \\n        p1 \\n        JOIN \\n        (SELECT DISTINCT statcast.game_date, statcast.batter \\n        FROM statcast \\n        WHERE statcast.batter= \\n        \\\"\\\"\\\"\\n        + str(player_id2)\\n        + \\\"\\\"\\\"\\n        AND statcast.game_date>\\n        \\\"\\\"\\\"\\n        + str(starting_date)\\n        + \\\")\\\"\\n        + \\\"\\\"\\\" \\n        p2\\n        ON p1.game_date=p2.game_date LIMIT 10;\\n        \\\"\\\"\\\"\\n    )\\n\\n    print(sql_query)\\n\\n    df_common_dates = pd.read_sql_query(sql_query, con)\\n    return df_common_dates\";\n",
+       "                var nbb_formatted_code = \"def get_common_playing_dates_simple(player_id1, player_id2, starting_date):\\n\\n    # Test set\\n    # player_id1 = 435622\\n    # player_id2 = 623993\\n    # starting_date = \\\"2019-09-01\\\"\\n\\n    sql_query = (\\n        \\\"\\\"\\\"\\n        SELECT * FROM \\n        (SELECT DISTINCT statcast.game_date, statcast.batter \\n        FROM statcast \\n        WHERE statcast.batter= \\n        \\\"\\\"\\\"\\n        + str(player_id1)\\n        + \\\"\\\"\\\"\\n        AND statcast.game_date>\\n        \\\"\\\"\\\"\\n        + str(starting_date)\\n        + \\\")\\\"\\n        + \\\"\\\"\\\" \\n        p1 \\n        JOIN \\n        (SELECT DISTINCT statcast.game_date, statcast.batter \\n        FROM statcast \\n        WHERE statcast.batter= \\n        \\\"\\\"\\\"\\n        + str(player_id2)\\n        + \\\"\\\"\\\"\\n        AND statcast.game_date>\\n        \\\"\\\"\\\"\\n        + str(starting_date)\\n        + \\\")\\\"\\n        + \\\"\\\"\\\" \\n        p2\\n        ON p1.game_date=p2.game_date LIMIT 10;\\n        \\\"\\\"\\\"\\n    )\\n\\n    print(sql_query)\\n\\n    df_common_dates = pd.read_sql_query(sql_query, con)\\n    return df_common_dates\";\n",
+       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
+       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
+       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
+       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
+       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
+       "                        }\n",
+       "                        break;\n",
+       "                    }\n",
+       "                }\n",
+       "            }, 500);\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def get_common_playing_dates_simple(player_id1, player_id2, starting_date):\n",
+    "\n",
+    "    # Test set\n",
+    "    # player_id1 = 435622\n",
+    "    # player_id2 = 623993\n",
+    "    # starting_date = \"2019-09-01\"\n",
+    "\n",
+    "    sql_query = (\n",
+    "        \"\"\"\n",
+    "        SELECT * FROM \n",
+    "        (SELECT DISTINCT statcast.game_date, statcast.batter \n",
+    "        FROM statcast \n",
+    "        WHERE statcast.batter= \n",
+    "        \"\"\"\n",
+    "        + str(player_id1)\n",
+    "        + \"\"\"\n",
+    "        AND statcast.game_date>\n",
+    "        \"\"\"\n",
+    "        + str(starting_date)\n",
+    "        + \")\"\n",
+    "        + \"\"\" \n",
+    "        p1 \n",
+    "        JOIN \n",
+    "        (SELECT DISTINCT statcast.game_date, statcast.batter \n",
+    "        FROM statcast \n",
+    "        WHERE statcast.batter= \n",
+    "        \"\"\"\n",
+    "        + str(player_id2)\n",
+    "        + \"\"\"\n",
+    "        AND statcast.game_date>\n",
+    "        \"\"\"\n",
+    "        + str(starting_date)\n",
+    "        + \")\"\n",
+    "        + \"\"\" \n",
+    "        p2\n",
+    "        ON p1.game_date=p2.game_date LIMIT 10;\n",
+    "        \"\"\"\n",
+    "    )\n",
+    "\n",
+    "    print(sql_query)\n",
+    "\n",
+    "    df_common_dates = pd.read_sql_query(sql_query, con)\n",
+    "    return df_common_dates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-01-31T16:52:03.651072Z",
+     "start_time": "2020-01-31T16:51:35.206123Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "        SELECT * FROM \n",
+      "        (SELECT DISTINCT statcast.game_date, statcast.batter \n",
+      "        FROM statcast \n",
+      "        WHERE statcast.batter= \n",
+      "        623993\n",
+      "        AND statcast.game_date>\n",
+      "        '2019-05-05') \n",
+      "        p1 \n",
+      "        JOIN \n",
+      "        (SELECT DISTINCT statcast.game_date, statcast.batter \n",
+      "        FROM statcast \n",
+      "        WHERE statcast.batter= \n",
+      "        544725\n",
+      "        AND statcast.game_date>\n",
+      "        '2019-05-05') \n",
+      "        p2\n",
+      "        ON p1.game_date=p2.game_date;\n",
+      "        \n"
+     ]
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            setTimeout(function() {\n",
+       "                var nbb_cell_id = 208;\n",
+       "                var nbb_unformatted_code = \"# Santander and Garcia (623993, 544725)\\n\\npid1 = 623993\\npid2 = 544725\\n\\ndate_cutoff = \\\"'2019-05-05'\\\"  # note internal quotes necessary for queyr\\n\\ndf_overlap_p1p2_dates = get_common_playing_dates(pid1, pid2, date_cutoff)\\ndf_overlap_p1p2_dates.columns = ['game_date_p1', 'pid_p1', 'game_date_p2', 'pid_p2']\";\n",
+       "                var nbb_formatted_code = \"# Santander and Garcia (623993, 544725)\\n\\npid1 = 623993\\npid2 = 544725\\n\\ndate_cutoff = \\\"'2019-05-05'\\\"  # note internal quotes necessary for queyr\\n\\ndf_overlap_p1p2_dates = get_common_playing_dates(pid1, pid2, date_cutoff)\\ndf_overlap_p1p2_dates.columns = [\\\"game_date_p1\\\", \\\"pid_p1\\\", \\\"game_date_p2\\\", \\\"pid_p2\\\"]\";\n",
+       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
+       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
+       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
+       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
+       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
+       "                        }\n",
+       "                        break;\n",
+       "                    }\n",
+       "                }\n",
+       "            }, 500);\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Santander and Garcia (623993, 544725)\n",
+    "\n",
+    "pid1 = 623993\n",
+    "pid2 = 544725\n",
+    "\n",
+    "date_cutoff = \"'2019-05-05'\"  # note internal quotes necessary for queyr\n",
+    "\n",
+    "df_overlap_p1p2_dates = get_common_playing_dates(pid1, pid2, date_cutoff)\n",
+    "df_overlap_p1p2_dates.columns = [\"game_date_p1\", \"pid_p1\", \"game_date_p2\", \"pid_p2\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-01-31T16:52:03.897262Z",
+     "start_time": "2020-01-31T16:52:03.885292Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(68, 4)"
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            setTimeout(function() {\n",
+       "                var nbb_cell_id = 209;\n",
+       "                var nbb_unformatted_code = \"df_overlap_p1p2_dates.shape\";\n",
+       "                var nbb_formatted_code = \"df_overlap_p1p2_dates.shape\";\n",
+       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
+       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
+       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
+       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
+       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
+       "                        }\n",
+       "                        break;\n",
+       "                    }\n",
+       "                }\n",
+       "            }, 500);\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_overlap_p1p2_dates.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-01-31T16:52:04.189182Z",
+     "start_time": "2020-01-31T16:52:04.138048Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>game_date_p1</th>\n",
+       "      <th>pid_p1</th>\n",
+       "      <th>game_date_p2</th>\n",
+       "      <th>pid_p2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-06-07</td>\n",
+       "      <td>623993.0</td>\n",
+       "      <td>2019-06-07</td>\n",
+       "      <td>544725.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-06-08</td>\n",
+       "      <td>623993.0</td>\n",
+       "      <td>2019-06-08</td>\n",
+       "      <td>544725.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-06-09</td>\n",
+       "      <td>623993.0</td>\n",
+       "      <td>2019-06-09</td>\n",
+       "      <td>544725.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-06-11</td>\n",
+       "      <td>623993.0</td>\n",
+       "      <td>2019-06-11</td>\n",
+       "      <td>544725.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-06-13</td>\n",
+       "      <td>623993.0</td>\n",
+       "      <td>2019-06-13</td>\n",
+       "      <td>544725.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>2019-09-11</td>\n",
+       "      <td>623993.0</td>\n",
+       "      <td>2019-09-11</td>\n",
+       "      <td>544725.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>2019-09-12</td>\n",
+       "      <td>623993.0</td>\n",
+       "      <td>2019-09-12</td>\n",
+       "      <td>544725.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>2019-09-16</td>\n",
+       "      <td>623993.0</td>\n",
+       "      <td>2019-09-16</td>\n",
+       "      <td>544725.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>2019-09-18</td>\n",
+       "      <td>623993.0</td>\n",
+       "      <td>2019-09-18</td>\n",
+       "      <td>544725.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>2019-09-21</td>\n",
+       "      <td>623993.0</td>\n",
+       "      <td>2019-09-21</td>\n",
+       "      <td>544725.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>68 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   game_date_p1    pid_p1 game_date_p2    pid_p2\n",
+       "0    2019-06-07  623993.0   2019-06-07  544725.0\n",
+       "1    2019-06-08  623993.0   2019-06-08  544725.0\n",
+       "2    2019-06-09  623993.0   2019-06-09  544725.0\n",
+       "3    2019-06-11  623993.0   2019-06-11  544725.0\n",
+       "4    2019-06-13  623993.0   2019-06-13  544725.0\n",
+       "..          ...       ...          ...       ...\n",
+       "63   2019-09-11  623993.0   2019-09-11  544725.0\n",
+       "64   2019-09-12  623993.0   2019-09-12  544725.0\n",
+       "65   2019-09-16  623993.0   2019-09-16  544725.0\n",
+       "66   2019-09-18  623993.0   2019-09-18  544725.0\n",
+       "67   2019-09-21  623993.0   2019-09-21  544725.0\n",
+       "\n",
+       "[68 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            setTimeout(function() {\n",
+       "                var nbb_cell_id = 210;\n",
+       "                var nbb_unformatted_code = \"df_overlap_p1p2_dates\";\n",
+       "                var nbb_formatted_code = \"df_overlap_p1p2_dates\";\n",
+       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
+       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
+       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
+       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
+       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
+       "                        }\n",
+       "                        break;\n",
+       "                    }\n",
+       "                }\n",
+       "            }, 500);\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_overlap_p1p2_dates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-01-31T16:52:12.177526Z",
+     "start_time": "2020-01-31T16:52:12.159480Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2019-06-07',\n",
+       " '2019-06-08',\n",
+       " '2019-06-09',\n",
+       " '2019-06-11',\n",
+       " '2019-06-13',\n",
+       " '2019-06-14',\n",
+       " '2019-06-15',\n",
+       " '2019-06-16',\n",
+       " '2019-06-18',\n",
+       " '2019-06-19',\n",
+       " '2019-06-22',\n",
+       " '2019-06-23',\n",
+       " '2019-06-25',\n",
+       " '2019-06-26',\n",
+       " '2019-06-28',\n",
+       " '2019-06-29',\n",
+       " '2019-06-30',\n",
+       " '2019-07-03',\n",
+       " '2019-07-06',\n",
+       " '2019-07-07',\n",
+       " '2019-07-12',\n",
+       " '2019-07-13',\n",
+       " '2019-07-14',\n",
+       " '2019-07-16',\n",
+       " '2019-07-17',\n",
+       " '2019-07-19',\n",
+       " '2019-07-20',\n",
+       " '2019-07-21',\n",
+       " '2019-07-22',\n",
+       " '2019-07-23',\n",
+       " '2019-07-24',\n",
+       " '2019-07-25',\n",
+       " '2019-07-26',\n",
+       " '2019-07-27',\n",
+       " '2019-07-28',\n",
+       " '2019-07-30',\n",
+       " '2019-08-01',\n",
+       " '2019-08-02',\n",
+       " '2019-08-03',\n",
+       " '2019-08-04',\n",
+       " '2019-08-05',\n",
+       " '2019-08-06',\n",
+       " '2019-08-07',\n",
+       " '2019-08-09',\n",
+       " '2019-08-10',\n",
+       " '2019-08-16',\n",
+       " '2019-08-17',\n",
+       " '2019-08-18',\n",
+       " '2019-08-19',\n",
+       " '2019-08-20',\n",
+       " '2019-08-21',\n",
+       " '2019-08-22',\n",
+       " '2019-08-23',\n",
+       " '2019-08-24',\n",
+       " '2019-08-25',\n",
+       " '2019-08-27',\n",
+       " '2019-08-28',\n",
+       " '2019-08-30',\n",
+       " '2019-08-31',\n",
+       " '2019-09-01',\n",
+       " '2019-09-02',\n",
+       " '2019-09-03',\n",
+       " '2019-09-10',\n",
+       " '2019-09-11',\n",
+       " '2019-09-12',\n",
+       " '2019-09-16',\n",
+       " '2019-09-18',\n",
+       " '2019-09-21']"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            setTimeout(function() {\n",
+       "                var nbb_cell_id = 211;\n",
+       "                var nbb_unformatted_code = \"# Format date time\\n[i.strftime(\\\"%Y-%m-%d\\\") for i in df_overlap_p1p2_dates[\\\"game_date_p1\\\"]]\";\n",
+       "                var nbb_formatted_code = \"# Format date time\\n[i.strftime(\\\"%Y-%m-%d\\\") for i in df_overlap_p1p2_dates[\\\"game_date_p1\\\"]]\";\n",
+       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
+       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
+       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
+       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
+       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
+       "                        }\n",
+       "                        break;\n",
+       "                    }\n",
+       "                }\n",
+       "            }, 500);\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Format date time\n",
+    "[i.strftime(\"%Y-%m-%d\") for i in df_overlap_p1p2_dates[\"game_date_p1\"]]"
+   ]
   }
  ],
  "metadata": {
