pushed files for site

--- a/daily_fantasy_baseball_predictor_v5.ipynb
+++ b/daily_fantasy_baseball_predictor_v5.ipynb
@@ -1046,11 +1046,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1402,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-03T04:57:41.722105Z",
-     "start_time": "2020-02-03T04:57:41.574801Z"
+     "end_time": "2020-02-11T13:56:48.803417Z",
+     "start_time": "2020-02-11T13:56:46.306997Z"
     }
    },
    "outputs": [
@@ -1059,7 +1059,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 11;\n",
+       "                var nbb_cell_id = 1402;\n",
        "                var nbb_unformatted_code = \"# Get player id\\nsql_query = \\\"\\\"\\\"\\nSELECT * FROM player_id;\\n\\\"\\\"\\\"\\n\\ndf_player_id = pd.read_sql_query(sql_query, con)\";\n",
        "                var nbb_formatted_code = \"# Get player id\\nsql_query = \\\"\\\"\\\"\\nSELECT * FROM player_id;\\n\\\"\\\"\\\"\\n\\ndf_player_id = pd.read_sql_query(sql_query, con)\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -1089,6 +1089,101 @@
     "\"\"\"\n",
     "\n",
     "df_player_id = pd.read_sql_query(sql_query, con)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1403,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-11T13:57:46.324625Z",
+     "start_time": "2020-02-11T13:57:46.282669Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/lacar/Documents/Goals_and_careers/Edu_Data_Science/Insight/dev_setup_and_project'"
+      ]
+     },
+     "execution_count": 1403,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            setTimeout(function() {\n",
+       "                var nbb_cell_id = 1403;\n",
+       "                var nbb_unformatted_code = \"os.getcwd()\";\n",
+       "                var nbb_formatted_code = \"os.getcwd()\";\n",
+       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
+       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
+       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
+       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
+       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
+       "                        }\n",
+       "                        break;\n",
+       "                    }\n",
+       "                }\n",
+       "            }, 500);\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1405,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-11T14:02:00.830432Z",
+     "start_time": "2020-02-11T14:02:00.713742Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            setTimeout(function() {\n",
+       "                var nbb_cell_id = 1405;\n",
+       "                var nbb_unformatted_code = \"df_player_id.to_csv(\\\"flask_insight_notes/flask_baseball/df_player_id.csv\\\")\";\n",
+       "                var nbb_formatted_code = \"df_player_id.to_csv(\\\"flask_insight_notes/flask_baseball/df_player_id.csv\\\")\";\n",
+       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
+       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
+       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
+       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
+       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
+       "                        }\n",
+       "                        break;\n",
+       "                    }\n",
+       "                }\n",
+       "            }, 500);\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# \n",
+    "# df_player_id.to_csv(\"flask_insight_notes/flask_baseball/df_player_id.csv\")"
    ]
   },
   {
@@ -23085,9 +23180,7 @@
      "end_time": "2020-02-04T01:21:06.403978Z",
      "start_time": "2020-02-04T01:21:06.349334Z"
     },
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
