update for website

--- a/player_pair_set_and_validation.ipynb
+++ b/player_pair_set_and_validation.ipynb
@@ -4023,7 +4023,8 @@
     "ExecuteTime": {
      "end_time": "2020-01-31T16:52:12.177526Z",
      "start_time": "2020-01-31T16:52:12.159480Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [
     {
