web app changes

--- a/ML_practice.ipynb
+++ b/ML_practice.ipynb
@@ -16,6 +16,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# K means vs. heirarchical clustering\n",
+    "\n",
+    "See this video\n",
+    "https://www.youtube.com/watch?v=QXOkPvFM6NU&t=933s\n",
+    "\n",
+    "See this site\n",
+    "https://www.analyticsvidhya.com/blog/2016/11/an-introduction-to-clustering-and-different-methods-of-clustering/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PCA\n",
+    "\n",
+    "Amazing explanation\n",
+    "<br>\n",
+    "https://stats.stackexchange.com/questions/2691/making-sense-of-principal-component-analysis-eigenvectors-eigenvalues\n",
+    "    \n",
+    "<br>\n",
+    "Good video on covariance matrix\n",
+    "<br>\n",
+    "\n",
+    "https://www.youtube.com/watch?v=152tSYtiQbw\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -66,7 +96,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
