--- a/algo.ipynb
+++ b/algo.ipynb
@@ -17,6 +17,154 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LC = leetcode\n",
+    "WB = whiteboard\n",
+    "O = other\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LC: twoSum"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given an array of integers, return indices of the two numbers such that they add up to a specific target.\n",
+    "\n",
+    "You may assume that each input would have exactly one solution, and you may not use the same element twice.\n",
+    "\n",
+    "Example: Given nums = [2, 7, 11, 15], target = 9,\n",
+    "\n",
+    "Because nums[0] + nums[1] = 2 + 7 = 9,\n",
+    "return [0, 1]."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-13T22:47:57.377562Z",
+     "start_time": "2020-02-13T22:47:57.371544Z"
+    }
+   },
+   "source": [
+    "## Brute force way\n",
+    "\n",
+    "Make all combinations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-17T23:43:03.658199Z",
+     "start_time": "2020-02-17T23:43:03.495418Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def twoSum(nums, target):\n",
+    "    total_list = list()\n",
+    "    for i, first_num in enumerate(nums):\n",
+    "        #print('first num: ', first_num)\n",
+    "        if i < len(nums):\n",
+    "            for j, second_num in enumerate(nums[i+1:]):\n",
+    "                #print('second num: ', second_num)\n",
+    "                total = first_num + second_num\n",
+    "                if total == target:\n",
+    "                    my_answer = (i, j+i+1)\n",
+    "    return my_answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-17T23:43:04.334547Z",
+     "start_time": "2020-02-17T23:43:04.295396Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 1)"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twoSum([2, 7, 11, 15], 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-14T05:29:24.117327Z",
+     "start_time": "2020-02-14T05:29:24.110645Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twoSum([2, 7, 11, 15], 26)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# WB: Subsets problem"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
@@ -220,10 +368,259 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-14T23:13:47.760183Z",
+     "start_time": "2020-02-14T23:13:47.694708Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# O: Binary search problem\n",
+    "\n",
+    "https://practice.geeksforgeeks.org/problems/who-will-win/0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given a sorted array arr[] of N integers and a number K is given. The task is to check if the element K is present in the array or not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-17T17:14:18.350787Z",
+     "start_time": "2020-02-17T17:14:18.194389Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# My own practice\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# This solution is from the website - practice it yourself!\n",
+    "  \n",
+    "# Returns index of x in arr if present, else -1 \n",
+    "def binarySearch (arr, l, r, x): \n",
+    "  \n",
+    "    # Check base case \n",
+    "    if r >= l: \n",
+    "  \n",
+    "        mid = l + (r - l) // 2\n",
+    "  \n",
+    "        # If element is present at the middle itself \n",
+    "        if arr[mid] == x: \n",
+    "            return mid \n",
+    "          \n",
+    "        # If element is smaller than mid, then it  \n",
+    "        # can only be present in left subarray \n",
+    "        elif arr[mid] > x: \n",
+    "            return binarySearch(arr, l, mid-1, x) \n",
+    "  \n",
+    "        # Else the element can only be present  \n",
+    "        # in right subarray \n",
+    "        else: \n",
+    "            return binarySearch(arr, mid + 1, r, x) \n",
+    "  \n",
+    "    else: \n",
+    "        # Element is not present in the array \n",
+    "        return -1\n",
+    "  \n",
+    "# Driver Code \n",
+    "arr = [ 2, 3, 4, 10, 40 ] \n",
+    "x = 10\n",
+    "  \n",
+    "# Function call \n",
+    "result = binarySearch(arr, 0, len(arr)-1, x) \n",
+    "  \n",
+    "if result != -1: \n",
+    "    print (\"Element is present at index % d\" % result) \n",
+    "else: \n",
+    "    print (\"Element is not present in array\") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LC: Palindrome\n",
+    "https://leetcode.com/problems/palindrome-number/\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Brute force\n",
+    "\n",
+    "O(n/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-16T01:39:15.369254Z",
+     "start_time": "2020-02-16T01:39:15.364213Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def is_palindrome(int_value):\n",
+    "    '''\n",
+    "    Is the input value a palindrome?\n",
+    "    '''\n",
+    "    # Turn it into a string to index through\n",
+    "    my_val = str(int_value)\n",
+    "    # See if it's length 1\n",
+    "    if len(my_val)==1:\n",
+    "        return True\n",
+    "    # Iterate but only up to half of the string\n",
+    "    for i in range(round(len(my_val)/2)):\n",
+    "        #print(i)\n",
+    "        if my_val[i] != my_val[-1*(i+1)]:\n",
+    "            return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-16T01:52:21.564289Z",
+     "start_time": "2020-02-16T01:52:21.559246Z"
+    }
+   },
+   "source": [
+    "## Take first half and just reverse it to see if it matches second half"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-16T01:59:41.819925Z",
+     "start_time": "2020-02-16T01:59:41.811783Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def is_palindrome_take_substring(int_value):\n",
+    "    '''\n",
+    "    Is the input value a palindrome?\n",
+    "    '''\n",
+    "    # Turn it into a string to index through\n",
+    "    my_val = str(int_value)\n",
+    "    # See if it's length 1\n",
+    "    if len(my_val)==1:\n",
+    "        return True\n",
+    "    # Take first half and just reverse it to see if it matches second hal\n",
+    "    half_length = round(len(my_val)/2)\n",
+    "    first_half = my_val[0:half_length]\n",
+    "    second_half = my_val[-half_length:]\n",
+    "    return first_half[::-1]==second_half"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-16T01:59:55.416218Z",
+     "start_time": "2020-02-16T01:59:55.410617Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_palindrome_take_substring(10001)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solution from board (don't fully get it)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " def isPalindrome(self, x: int) -> bool:\n",
+    "        if x < 0:\n",
+    "            return False\n",
+    "        \n",
+    "        original = x\n",
+    "        rev = 0\n",
+    "        while x > 0:\n",
+    "            # Essentially what we are doing here is making the least significant digit \n",
+    "            # into the most significant digit in the reversed number\n",
+    "            # e.g 321 => 123\n",
+    "            # iteration 1: rev = 1   = 0 + 1\n",
+    "            # iteration 2: rev = 12  = 1*10 + 2 # Notice how the '1' moved to the left because of the multiply by 10\n",
+    "            # iteration 3: rev = 123 = 12*10 + 3 \n",
+    "            rev = rev * 10 + x % 10\n",
+    "            x //= 10\n",
+    "            \n",
+    "        return rev == original"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
+   ]
   }
  ],
  "metadata": {
@@ -255,7 +652,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
